Added about page and recent post

--- a/recentpost.html
+++ b/recentpost.html
@@ -23,14 +23,18 @@
 
         <div class="container container-flex">
             <main>
-                <article class="article-featured">
-                    <h2 class="article-title">Finding simplicity in life</h2>
-                    <img src="vendor/img/4.jpg" alt="Food" class="article-img">
-                    <p class="article-info">July 23, 2019 | 3 comments</p>
-                    <p class="article-body">
-                        <strong>Life can get complicated really quickly</strong>, but it doesn't have to be! There are many ways to simplify your life, <a href="#"> a few of which we've explored in the past</a>. This week we're taking a bit of a approach though, in how you can find simplicity in the life you already living.
-                    </p>
-                    <a href="#" class="read-more">continue reading</a>
+                <article class="article-recent">
+                    <div class="article-recent-main">
+                        <h2 class="article-title">Finding simplicity in life</h2>
+                        <p class="article-body">
+                            <strong>Life can get complicated really quickly</strong>, but it doesn't have to be! There are many ways to simplify your life, <a href="#"> a few of which we've explored in the past</a>. This week we're taking a bit of a approach though, in how you can find simplicity in the life you already living.
+                        </p>
+                        <a href="#" class="read-more">continue reading</a>
+                    </div>
+                    <div class="article-recent-secondary">
+                        <img src="vendor/img/4.jpg" alt="Food" class="article-img">
+                        <p class="article-info">July 23, 2019 | 3 comments</p>
+                    </div>
                 </article>
                 <article class="article-recent">
                     <div class="article-recent-main">
